force-app/main/default/objects/atl_KnowledgeArticle__c/atl_KnowledgeArticle__c.object-meta.xml
<CustomObject>
    <label>Knowledge Article</label>
    <nameField>
        <displayFormat>KA-{0000}</displayFormat>
        <label>Knowledge Article Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Articles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>