force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_Author__c.field-meta.xml
<CustomField>
    <fullName>atl_Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who wrote the article</description>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipName>atl_KnowledgeArticles</relationshipName>
    <type>Lookup</type>
</CustomField>