force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_AuthorName__c.field-meta.xml
<CustomField>
    <fullName>atl_AuthorName__c</fullName>
    <formula>atl_Author__r.FirstName &amp; &apos; &apos; &amp; atl_Author__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Author</label>
    <type>Text</type>
</CustomField>