force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_Body__c.field-meta.xml
<CustomField>
    <fullName>atl_Body__c</fullName>
    <description>Rich text area to hold the entire content of the article</description>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>