force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_createddateDisplay__c.field-meta.xml
<CustomField>
    <fullName>atl_createddateDisplay__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot; &quot; &amp; IF( OR( VALUE( MID( TEXT( CreatedDate - 7/24 ), 12, 2 ) ) = 0, VALUE( MID( TEXT( CreatedDate - 7/24 ), 12, 2 ) ) = 12 ), &quot;12&quot;, TEXT( VALUE( MID( TEXT( CreatedDate - 7/24 ), 12, 2 ) ) - IF( VALUE( MID( TEXT( CreatedDate - 7/24 ), 12, 2 ) ) &lt; 12, 0, 12 ) ) ) &amp; &quot;:&quot; &amp; MID( TEXT( CreatedDate - 7/24 ), 15, 2 ) &amp; &quot; &quot; &amp; IF( VALUE( MID( TEXT( CreatedDate - 7/24 ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Text</type>
</CustomField>