force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_Domain__c.field-meta.xml
<CustomField>
    <fullName>atl_Domain__c</fullName>
    <label>Domain (Salesforce Only)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Platforms</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>