force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_DomainDisplay__c.field-meta.xml
<CustomField>
    <fullName>atl_DomainDisplay__c</fullName>
    <formula>IF(INCLUDES( atl_Domain__c , &quot;CPQ&quot;), &quot;CPQ&quot; + BR() , NULL) +
IF(INCLUDES( atl_Domain__c , &quot;Billing&quot;), &quot;Billing&quot; + BR() , NULL) +
IF(INCLUDES( atl_Domain__c , &quot;Platform&quot;), &quot;Platform&quot; + BR() , NULL) +
IF(INCLUDES( atl_Domain__c , &quot;Integrations&quot;), &quot;Integrations&quot; + BR() , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>