force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_Legacy__c.field-meta.xml
<CustomField>
    <fullName>atl_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes a legacy article</description>
    <label>Legacy</label>
    <type>Checkbox</type>
</CustomField>