force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_Published__c.field-meta.xml
<CustomField>
    <fullName>atl_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Drives whether articles are published or not</description>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>