force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_SalesforceFileID__c.field-meta.xml
<CustomField>
    <fullName>atl_SalesforceFileID__c</fullName>
    <label>Salesforce File ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>