force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_Sequence__c.field-meta.xml
<CustomField>
    <fullName>atl_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>