force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_StatusDisplay__c.field-meta.xml
<CustomField>
    <fullName>atl_StatusDisplay__c</fullName>
    <formula>CASE(atl_Status__c,&quot;Approved&quot;, IMAGE(&quot;https://atginfo.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0683y00000Cvvqj&amp;operationContext=CHATTER&amp;contentId=05T3y00000fBD8s&quot;, &quot;Approved&quot;,25,25) + &quot; Approved&quot;,
&quot;Review in Progress&quot;,IMAGE(&quot;https://atginfo.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0683y00000Cvvqk&amp;operationContext=CHATTER&amp;contentId=05T3y00000fBD8t&quot;,&quot;Review in Progress&quot;,25,25) + &quot; Review in Progress&quot;,&quot;Pending Review&quot;, IMAGE(&quot;https://atginfo.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0683y00000Cvvql&amp;operationContext=CHATTER&amp;contentId=05T3y00000fBD8u&quot;, &quot;Pending Review&quot;,25,25) + &quot; Pending Review&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>