force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_Technology__c.field-meta.xml
<CustomField>
    <fullName>atl_Technology__c</fullName>
    <description>Technology that the knowledge article is tied to</description>
    <label>Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Xactly</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Gotransverse</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>