force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_TechnologyDisplay__c.field-meta.xml
<CustomField>
    <fullName>atl_TechnologyDisplay__c</fullName>
    <formula>IF(INCLUDES( atl_Technology__c , &quot;Salesforce&quot;), &quot;Salesforce&quot; + BR() , NULL) +
IF(INCLUDES( atl_Technology__c , &quot;General&quot;), &quot;General&quot; + BR() , NULL) +
IF(INCLUDES( atl_Technology__c , &quot;Xactly&quot;), &quot;Xactly&quot; + BR() , NULL) +
IF(INCLUDES( atl_Technology__c , &quot;DocuSign&quot;), &quot;DocuSign&quot; + BR() , NULL) +
IF(INCLUDES( atl_Technology__c , &quot;Conga&quot;), &quot;Conga&quot;, NULL) +
IF(INCLUDES( atl_Technology__c , &quot;Gotransverse&quot;), &quot;Gotransverse&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technology</label>
    <type>Text</type>
</CustomField>