force-app/main/default/objects/atl_KnowledgeArticle__c/fields/atl_Title__c.field-meta.xml
<CustomField>
    <fullName>atl_Title__c</fullName>
    <description>Title of the user-submitted article</description>
    <externalId>true</externalId>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>