force-app/main/default/objects/atl_KnowledgeArticle__c/fields/Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;https://atginfo.force.com/atlas/s/atl-knowledgearticle/&quot; &amp; Id &amp; &quot;/&quot; &amp;  Name , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hyperlink</label>
    <type>Text</type>
</CustomField>