force-app/main/default/objects/atl_KnowledgeArticle__c/validationRules/Only_Pick_Domain_for_Salesforce.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Pick_Domain_for_Salesforce</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(INCLUDES(atl_Technology__c,&quot;Salesforce&quot;)),NOT(ISBLANK(atl_Domain__c)))</errorConditionFormula>
    <errorMessage>Oops! Please only select a Domain if the Technology is Salesforce.</errorMessage>
</ValidationRule>