force-app/main/default/objects/atl_KnowledgeArticle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>atl_StatusDisplay__c</columns>
    <columns>NAME</columns>
    <columns>atl_Title__c</columns>
    <columns>atl_AuthorName__c</columns>
    <columns>atl_Technology__c</columns>
    <columns>atl_Domain__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>