force-app/main/default/objects/atl_KnowledgeArticle__c/listViews/DocuSign.listView-meta.xml
<ListView>
    <fullName>DocuSign</fullName>
    <columns>atl_StatusDisplay__c</columns>
    <columns>NAME</columns>
    <columns>atl_Title__c</columns>
    <columns>atl_TechnologyDisplay__c</columns>
    <columns>atl_AuthorName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>atl_Technology__c</field>
        <operation>equals</operation>
        <value>DocuSign</value>
    </filters>
    <label>DocuSign</label>
</ListView>